2002-04-29  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode-menu-layout): Don't try to display tooltips
	for XEmacs.
	(po-subedit-mode-menu-layout): Likewise.

2002-04-28  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Treat mkinstalldirs like config.rpath.

2002-04-27  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode-menu-layout): Add tooltips.
	(po-subedit-mode-menu-layout): Likewise.

	* po-mode.el (po-mode-menu-layout): Adopt terminology for editing
	from Emacs (cut/copy/paste).

2002-04-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.2 released.

2002-04-22  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (lisp_LISP): Add po-compat.el.
	(EXTRA_DIST): Use it.

2002-03-17  Karl Eichwalder  <ke@suse.de>

	* po-compat.el: New file, extracted from po-mode.el.
	* po-mode.el (po-content-type-charset-alist, po-find-charset,
	po-find-file-coding-system-guts, po-find-file-coding-system): Move to
	po-compat.el.

2002-04-19  Bruno Haible  <bruno@clisp.org>

	* po-mode.el (po-team-name-to-code): Add Ido and Walloon. Change
	Javanese from jw to jv.

2002-03-15  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Use "sed -e 1q" instead of "head -1", for compliance
	to pure naked POSIX 1003.1-2001 environments.
	From Paul Eggert.

2002-03-14  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-team-name-to-code): Add es_AR, zh_CN, and zh_TW.

2002-03-12  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.1 released.

2002-03-11  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-find-file-coding-system-guts): Checking
	'insert-file-contents' must come first to avoid messing up with
	arguments.
	Reported by Neil Darlow; fixed by Andreas Schwab.

2002-03-09  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-find-file-coding-system-guts): Don't try to
	detect the coding system when filename does not exist.
	(po-compute-counters): Search for "^msgid" not 'po-next-entry' if
	we don't know for sure any entry will follow at all.

2002-02-18  Karl Eichwalder  <ke@suse.de>