@@ -1,3 +1,7 @@
+2002-04-28  Bruno Haible  <bruno@clisp.org>
+
+	* gettextize.in: Use 'echo' instead of '$echo'.
+
 2002-04-29  Karl Eichwalder  <ke@suse.de>
 
 	* po-mode.el (po-mode-menu-layout): Don't try to display tooltips
